<resources>
    <string name="app_name">FeTare2k</string>
    <string name="logInCaptin">login as a captain</string>
    <string name="logInClient">login as a client</string>
    <string name="login">Sign In</string>
    <string name="EnterYourMail">Enter your Email</string>
    <string name="EnterYourPassword">Enter your Password</string>
    <string name="forgotPassword">Forget password</string>
    <string name="RememberMe">Remember me</string>
    <string name="NotAMember">Not a Member..?</string>
    <string name="SignUpNow">Sign up Now</string>
    <string name="SignUp">Create Account</string>
    <string name="EnterFullName">Full name</string>
    <string name="EnterFirstName">First name</string>
    <string name="EnterSecondName">Last name</string>
    <string name="EnterYourPasswordAgain">Confirm your Password</string>
    <string name="EnterYourPhoneNumber">Enter your Mobile</string>
    <string name="EnterYourAge">Enter your Age</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="gender">Gender:</string>
    <string name="EnterYourNationalID">Enter Your National ID</string>
    <string name="EnterYourAddress">Enter Your Address</string>
    <string name="Signup">Sign up</string>
    <string name="AlreadyHaveAccount">Already Have Account..?</string>
    <string name="mails">Email</string>
    <string name="phones">Mobile</string>
    <string name="send">Send</string>
    <string name="verificationCode">Verification Code</string>
    <string name="submit">Submit</string>
    <string name="uploadprofileImage">Upload Profile Image</string>
    <string name="uploadIDCardscreen">Upload copy of ID card</string>
    <string name="weNeedEmailAndPassword">we Just needed your Email and phone number to send code to reset password.</string>

    <string name="title_activity_captain_home_">Delivery requests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="clientsrequests">Clients Requests</string>
    <string name="contactus">Contact us</string>
    <string name="logout">Log out</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="password">******</string>
    <string name="ConfirmPassword">******</string>
    <string name="save">Save</string>
    <string name="getInTouch">Get In Touch !</string>
    <string name="alwayswithinyourreach">always within your reach</string>
    <string name="address">Egypt, Assuit Eelu University</string>
    <string name="title_activity_maps">Map</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

</resources>
