<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile"

            />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_local_shipping_black_24dp"
            android:title="@string/clientsrequests" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/contactus" />

        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_portable_wifi_off_black_24dp"
            android:title="@string/logout" />
    </group>


</menu>
