<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckPhoneNumberActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>

        <EditText
            android:id="@+id/checkEmail"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="49dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="146dp"
            android:background="@drawable/round_edittxt"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/mails"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/checkMobile"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            android:layout_marginStart="49dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="95dp"
            android:background="@drawable/round_edittxt"
            android:drawableLeft="@drawable/ic_https_black_24dp"
            android:drawablePadding="5dp"

            android:ems="10"
            android:hint="@string/phones"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_alignParentBottom="true"
            android:layout_marginStart="84dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/buttons_shape"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="20sp"

            android:textStyle="bold" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>